--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,3 +4,9 @@
 <%= user.name  %>
 <%= link_to user.name, user %>
 <% end %>
+<h1> These are top scores </h1>
+<% @top_scores.each do |topscore| %>
+
+<%= topscore[:user_name] %>
+<%= topscore[:score] %>
+<% end %>
