--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
 <h1> <%= @user.name %></h1>
+<h2> Your Level is: <%= @level %> </h2>
+<h1>These are the high scores</h1>
+<% @highscores.each do |score| %>
+<p>highscore</p>
+<p><%= score.score %></p>
+<p><%= score.created_at.strftime("%d %b. %Y") %></p>
+<% end %>
+<h1>These are the last 10 </h1>
+<% @lastscores.each do |score| %>
+<p>LastScores</p>
+<p><%= score.score %></p>
+<p><%= score.created_at.strftime("%d %b. %Y") %></p>
+<% end %>
+
