--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,3 +2,14 @@
 	height: 65px;
 	padding-top: 7px;
 }
+
+
+.marce {
+	background-image: url(image-path("speed-background.jpg"));
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	height: 770px;
+	margin-top: -45px;
+	margin-left: -15px;
+	margin-right: -15px;
+}
