--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,11 @@
+<div class = "marce">
 <h1>Pages#index</h1>
 <p>Find me in app/views/pages/index.html.erb</p>
+</div>
+
+
+<% if current_user %>
+              THIS SHOULD BE JUAN GAME!
+<% else %>
+              THIS SHOULD BE THE PAGE WHEN YOU ARE NOT SIGN-IN (Landing)
+            <% end %>
