Added javascript game

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,6 +5,13 @@
 
 
 <% if current_user %>
+	
+	<div class="square">
+ 		<div class="timer">
+ 		</div>
+ 		<button class="start">Start Typing Race</button>
+ </div>
+
               THIS SHOULD BE JUAN GAME!
 <% else %>
               THIS SHOULD BE THE PAGE WHEN YOU ARE NOT SIGN-IN (Landing)
