--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,3 +13,52 @@
 	margin-left: -15px;
 	margin-right: -15px;
 }
+
+.square {
+	height: 300px;
+	width: 400px;
+	background: gray;
+}
+
+.start {
+	position: relative;
+	top: 130px;
+	left: 110px;
+	height: 40px;
+	width: 180px;
+	border-radius: 20px;
+}
+
+
+/*Typeracer game styles*/
+.quote {
+	width: 360px;
+	height: 180px;
+	background: white;
+	position: relative;
+	top: 40px;
+	left: 20px;
+}
+
+#typing {
+	position: relative;
+	top: 80px;
+	left: 20px;
+	width: 360px;
+	height: 30px;
+	background: whiteSmoke;
+}
+
+.restart {
+	position: relative;
+	top: 70px;
+	left: 110px;
+	height: 40px;
+	width: 180px;
+	border-radius: 20px;
+}	
+
+.highlight {
+	color: #009900;
+	text-decoration: underline;
+}
