--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,5 +28,9 @@
      
       <%= yield %>
     </div>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> 
+    <script src="https://rawgit.com/johnschult/jquery.countdown360/master/dist/jquery.countdown360.min.js"></script>
+
   </body>
 </html>
