--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
             <% if current_user %>
               Welcome <strong><%= current_user.name %></strong>!
               <%= link_to "Sign out", signout_path, id: "sign_out" %>
-            <% else %>
-              <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+            <%# else %>
+              <%#= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
             <% end %>
           </p>
         </nav>
