--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,11 +1,15 @@
 <div class = "marce">
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
-</div>
-
-
 <% if current_user %>
               THIS SHOULD BE JUAN GAME!
 <% else %>
-              THIS SHOULD BE THE PAGE WHEN YOU ARE NOT SIGN-IN (Landing)
-            <% end %>
+	<div class="row">
+  		<div class="col-md-4 col-md-offset-4">
+  			<div class="btn btn-lg" id="ghost-btn">
+				<%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in", class: "btn" %>
+			</div>
+		</div>
+	</div>
+<% end %>
+</div>
+
+
