--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,7 +7,7 @@
 	background-image: url(image-path("speed-background.jpg"));
 	background-repeat: no-repeat;
 	background-size: 100% auto;
-	height: 770px;
+	height: 500px;
 	margin-top: -45px;
 	margin-left: -15px;
 	margin-right: -15px;
@@ -15,44 +15,63 @@
 
 #ghost-btn {
 	background: transparent;
-	color: #F2F2F2;
-	border-radius: 20px;
+	border-radius: 15px;
 	border: 3px solid white;
-	margin-top: 100px;
+	margin-top: 220px;
 	width: 100%;
+	height: 80px;
 }
 
-/*Typeracer game styles*/
+#ghost-btn:hover {
+	border: 3px solid #B9B9B9;
+	background: rgba(0, 0, 0, 0.31);
+}
+
+#ghost-btn a {
+	color: #F2F2F2;
+	font-size: 25px;
+}
+
+/*Game*/
 
 .square {
-	height: 300px;
-	width: 400px;
-	background: gray;
+	height: 350px;
+	background: #E6E6E6;
+	border-radius: 15px;
+	margin-top: 90px;
+	box-shadow: 3px 6px 15px rgba(0, 0, 0, 0.2);
+	padding: 30px;
+}
+
+.info {
+	height: 350px;
+	background: #F8F8F8;
+	border-radius: 15px;
+	margin-top: 90px;
+	box-shadow: 3px 6px 15px rgba(0, 0, 0, 0.2);
 }
 
 .start {
 	position: relative;
 	top: 130px;
-	left: 110px;
-	height: 40px;
-	width: 180px;
+	left: 120px;
+	height: 48px;
+	width: 190px;
 	border-radius: 20px;
 }
 
 .quote {
-	width: 360px;
-	height: 180px;
+	height: 240px;
 	background: white;
 	position: relative;
-	top: 40px;
-	left: 20px;
+	border-radius: 5px;
+	padding: 12px 17px;
 }
 
 #typing {
 	position: relative;
-	top: 80px;
-	left: 20px;
-	width: 360px;
+	top: 26px;
+	left: 0px;
 	height: 30px;
 	background: whiteSmoke;
 }
