--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,9 +1,17 @@
 <div class = "marce">
 	<% if current_user %>
-		<div class="square">
-	 		<div class="timer">
-	 		</div>
-	 		<button class="start">Start Typing Race</button>
+		<div class="col-md-5 col-md-offset-1">
+			<div class="square">
+	 			<div class="timer">
+	 			</div>
+	 			<button class="btn btn-lg btn-primary start">Start Typing Race</button>
+ 			</div>
+		 </div>
+		 <div class="col-md-4 col-md-offset-1">
+			<div class="info">
+	 			<div class="timer">
+	 			</div>
+ 			</div>
 		 </div>
 	<% else %>
 		<div class="row">
