--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,9 +2,13 @@
 	<% if current_user %>
 		<div class="col-md-5 col-md-offset-1">
 			<div class="square">
-	 			<div class="timer">
+		 		<!-- <div class="col-md-4 col-md-offset-4">	 -->
+		 			<div class="timer">
+		 			</div>
+		 		<!-- </div> -->
+	 			<div class="col-md-6 col-md-offset-3">
+		 			<button class="btn btn-lg btn-primary start">Start Typing Race</button>
 	 			</div>
-	 			<button class="btn btn-lg btn-primary start">Start Typing Race</button>
  			</div>
 		 </div>
 		 <div class="col-md-4 col-md-offset-1">
