--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,6 @@
 <div class = "marce">
 	<% if current_user %>
+		<div id="user_id" data-user="<%= current_user.id %>"></div>	
 		<div class="square">
 	 		<div class="timer">
 	 		</div>
