--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<div class = "marce">
+<div class = "content">
 	<% if current_user %>
 		<div class="col-md-5 col-md-offset-1">
 			<div class="square">
