--- a/app/assets/javascripts/typeracer.js.erb
+++ b/app/assets/javascripts/typeracer.js.erb
@@ -57,9 +57,12 @@ $(document).ready(function(){
 			counter = 0;
 			end_time = Date.now()
 			score(quote)
+			image_random()
 			$('.quote').after("<button class='btn btn-lg btn-primary restart'>New game?</button>");
 			$('.quote').find('h4').remove(),
-			$('.quote').append("<h4>Time: "+time+" seconds<br>WPM: "+wpm+" </h4>"),
+			$('.quote').append("<img class='image-score' src="+image+">"),
+			$('.quote').append("<h4 class='show-score'>Your time was: "+time+" seconds<br>Score: "+wpm+" words per minute </h4>"),
+
 			// $('.quote').append("<h4>Time: "+time+"<br>WPM: "+wpm+" </h4>")
 			$('#typing').remove(),
 			words.push(1);
@@ -74,6 +77,7 @@ $(document).ready(function(){
 		$('.quote').remove(),
 		$('#countdown360_countdown').show(),
 		// quote = $('.quote h4').html(),
+		quote_random()
 		edited_quote = quote,
 		timer(),
 		words = quote.split(" ")
@@ -84,7 +88,7 @@ $(document).ready(function(){
 	var timer = function() {
 		$("#countdown").countdown360({
 	    radius      : 60.5,
-	    seconds     : 1,
+	    seconds     : 5,
 	    strokeWidth : 15,
 	    fillStyle   : '#0276FD',
 	    strokeStyle : '#003F87',
@@ -134,7 +138,7 @@ $(document).ready(function(){
 
 	//función para random quote
 	var quote_random = function() {
-		console.log("entre a random")
+		// console.log("entre a random")
 		$.ajax ({
 			url: "/scores/quote",
 			method: "GET",
@@ -150,6 +154,7 @@ $(document).ready(function(){
 				edited_quote = quote
 			}
 		})
+
 		// .success(function(e){
 		// 	console.log("respuesta exitosa ajax")
 		// 	console.log(e)
@@ -159,7 +164,14 @@ $(document).ready(function(){
 		// }).done(function(response){
 		// 	console.log("termino ajax")
 		// });
-	};	
+	};
+
+	//random image para terminar el juego	
+	var image_random = function() {
+		console.log("entre image")
+		var images = ["http://www.lemonthemovie.com/albert-einstein-funny-pictures-118.jpg", "http://t2.gstatic.com/images?q=tbn:ANd9GcRulD7utpaosYBodYMTNTWW5TeQC9tOUTpBMGUSGGZ8B982cUWm","http://static.wallpedes.com/thumbnail/images/images-for-gt-einstein-cartoon-funny-funny-cartoon-jokes-videos-pictures-quotes-games-or-die-sms-pics-facebook-status-clips.jpg"];
+		image = images[Math.floor(Math.random()*images.length)];		
+	}
 
 });
 
