Starting with Users' view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -96,10 +96,13 @@
 	margin-right: 7px;
 }
 
+.row { 
+	padding: 25px 0 5px 25px;
+}
+
 .prof_image {
 	width: 50px;
 	border-radius: 20%;
-	margin-top: 3px;
 	margin-right: 7px;
 }
 
