Fixed links and top10 scores

--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,4 +1,4 @@
-<% @scores.each do |score| %>
-<%= score.name  %>
-<%= link_to score.name, score %>
+<% @highscores.each do |score| %>
+<%= @users.find(score[:user_id]).name %>
+<%= score[:point] %>
 <% end %>
