--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,17 @@
           </div>
           <div class="navbar-right">
             <% if current_user %>
-              <div class="navbar-text">Welcome <strong><%= current_user.name %></strong>!</div>
+              <div class="navbar-text">Welcome <strong><%= link_to current_user.name, user_path(current_user) %></strong>!</div>
               <li class="dropdown navbar-right">
               <a href="#" class="dropdown-toggle navbar-right" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag current_user.image, class: "image_bar" %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">My Profile</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Users</a></li>
-                <li><a href="#">Scores</a></li>
+                
+                
+                <li><a href="#"><%= link_to "Users", users_path  %></a></li>
+                <li><a href="#"><%= link_to "Scores", scores_path %></a></li>
                 <li class="divider"></li>
                 <li><a href="#"><%= link_to "Sign out", signout_path, id: "sign_out" %></a></li>
+              
               </ul>
             </li>
             <% end %>
