--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,3 @@
-<<<<<<< HEAD
-<h1>All the Users</h1>
-
-<% @users.each do |user| %>
-<%= user.name  %>
-<%= link_to user.name, user %>
-
-<% end %>
-<h1> These are top scores </h1>
-<% @top_scores.each do |topscore| %>
-<%= topscore[:user_name] %>
-
-<%= topscore[:point] %>
-<% end %>
-=======
 <div class="container">
 	<!-- <div class="col-md-11 col-md-offset-1"> -->
 		<h1>Users</h1>
@@ -24,18 +9,10 @@
 					</div>
 					<div id="content" class="col-xs-9">
 						<strong><%= link_to user.name, user %></strong><br>
-						<% @top = 0 %>
-						
-						<% @top_scores.each do |topscore| %>
-						<% @score = topscore[:score].to_i %>
-
-						
-						<% end %>
-						Highest Score: <%= @max_score %> WPM
+						High Score: <%= user.scores('point DESC').first.point %> WPM
 					</div>
 				</div>
-			</div>
-		<% end %>
+			</div>		<% end %>
 	<!-- </div> -->
 </div>
 
@@ -48,5 +25,4 @@
  -->
 
 
->>>>>>> 388933c35d0e34365cc3b3bf74110a56a6b4fa16
 
