--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,3 @@
-
-<h1>All the Users</h1>
-
-<% @users.each do |user| %>
-<%= user.name  %>
-<%= link_to user.name, user %>
-
-<% end %>
-<h1> These are top scores </h1>
-<% @top_scores.each do |topscore| %>
-<%= topscore[:user_name] %>
-
-<%= topscore[:point] %>
-<% end %>
-
 <div class="container">
 	<h1>Racers</h1>
 	<% @users.each do |user| %>
@@ -23,36 +8,17 @@
 				</div>
 				<div id="content" class="col-xs-9">
 					<strong><%= link_to user.name, user %></strong><br>
-					<% @top = 0 %>
-					
-					<% @top_scores.each do |topscore| %>
-					<% @score = topscore[:score].to_i %>
+					Highest Score:  <% if user.scores.first  %>
+							<%= user.scores('point DESC').first.point %> WPM
+						<% else %>
+							<%= "No score" %>
+						<% end  %>
 
-					<% end %>
-					Highest Score: <%= @max_score %> WPM
 				</div>
 			</div>
 		</div>
 	<% end %>
-
-<div class="container">
-	<!-- <div class="col-md-11 col-md-offset-1"> -->
-		<h1>Users</h1>
-		<% @users.each do |user| %>
-			<div class="col-md-4">		
-				<div class="row">
-					<div id="sidebar" class="col-xs-3">
-						<%= image_tag user.image, class: "prof_image" %></li>
-					</div>
-					<div id="content" class="col-xs-9">
-						<strong><%= link_to user.name, user %></strong><br>
-						High Score: <%= user.scores('point DESC').first.point %> WPM
-					</div>
-				</div>
-			</div>		<% end %>
-	<!-- </div> -->
-
 </div>
 <div class="footer">
-<div>
+</div>
 
